Bug 461560 - Output selection combobox does not update when screens change
Summary: Output selection combobox does not update when screens change
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_tablet (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-07 21:26 UTC by Nicolas Fella
Modified: 2022-11-09 14:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2022-11-07 21:26:28 UTC
STEPS TO REPRODUCE
1. Start with one monitor
2. Open tablet KCM
3. Output selection combobox is disabled
4. Plug in second monitor

OBSERVED RESULT
output combobox is still disabled

EXPECTED RESULT
output combobox is enabled and allows choosing between two outputs

SOFTWARE/OS VERSIONS
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 5.15.7-kde

ADDITIONAL INFORMATION

The inverse is also broken, i.e. unplugging the monitor doesn't update the combobox either
Comment 1 Bug Janitor Service 2022-11-08 14:13:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/1244
Comment 2 Nicolas Fella 2022-11-09 14:07:41 UTC
Git commit 18461104c0e520d1e72d7e36192c475b901a45c5 by Nicolas Fella.
Committed on 09/11/2022 at 14:07.
Pushed by nicolasfella into branch 'master'.

[kcms/tablet] Reload output combobox when outputs change

M  +17   -0    kcms/tablet/kcmtablet.cpp
M  +8    -1    kcms/tablet/package/contents/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/commit/18461104c0e520d1e72d7e36192c475b901a45c5
Comment 3 Nicolas Fella 2022-11-09 14:09:03 UTC
Git commit 2bef275debf796bbb3e190d21cfddaaea434f8c3 by Nicolas Fella.
Committed on 09/11/2022 at 14:08.
Pushed by nicolasfella into branch 'Plasma/5.26'.

[kcms/tablet] Reload output combobox when outputs change
(cherry picked from commit 18461104c0e520d1e72d7e36192c475b901a45c5)

M  +17   -0    kcms/tablet/kcmtablet.cpp
M  +8    -1    kcms/tablet/package/contents/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/commit/2bef275debf796bbb3e190d21cfddaaea434f8c3