[kcms/tablet] Reload output combobox when outputs change

BUG: 461560